Custom properties do no respect min/max values #31661

Closed
opened 2012-05-31 16:26:36 +02:00 by Tobias Oelgarte · 4 comments

%%%In recent version (from this weak, my is currently r47277) the min/max values from custom properties are ignored.

Steps to reproduce:

  1. Open default scene
  2. Go to the object tab and add a custom property (default: min=0, max=1)
  3. After adding the property grab the slider, that will not be restricted to min/max%%%
%%%In recent version (from this weak, my is currently r47277) the min/max values from custom properties are ignored. Steps to reproduce: 1. Open default scene 2. Go to the object tab and add a custom property (default: min=0, max=1) 3. After adding the property grab the slider, that will not be restricted to min/max%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%It seems that when you add the property, there is no meta data like min/max/description added, only when you press Edit this is created. I get the impression from the code that this was perhaps intentional, but it seems a bit strange if that's the case. Assigned to Campbell.%%%

%%%It seems that when you add the property, there is no meta data like min/max/description added, only when you press Edit this is created. I get the impression from the code that this was perhaps intentional, but it seems a bit strange if that's the case. Assigned to Campbell.%%%

%%%fixed r51652.%%%

%%%fixed r51652.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31661
No description provided.