fix [#31661] Custom properties do no respect min/max values

also renamed function added prev commit